# MarioKart8_lanplay_video_processor

./: .gitignore  AGENTS.md  BEGINNER_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  Extract_Frames_From_Video.py  Extract_Text_From_Frames.py  LICENSE  Main_RunMe.py  PROJECT_STRUCTURE.md  README.md  RELEASE_CHECKLIST.md  ReadMe.txt  app_config.example.json  app_runtime.py  console_logging.py  data_paths.py  extract_common.py  extract_frames.py  extract_initial_scan.py  extract_score_screen_selection.py  extract_text.py  extract_video_io.py  main.py  pyproject.toml  requirements.txt  run_selected_videos_single_line.txt  track_metadata.py
.github/: pull_request_template.md
Output_Results/: Tournament_Results.xlsx
TrackNames/: Mariokart8 List of TrackNames Eng_Dutch.txt
config/: app_config.json
docs/: BEGINNER_SETUP.md  CHANGELOG.md  CODEBASE_MAP.md  CONTRIBUTING.md  LINUX_MACOS_SETUP.md  PERFORMANCE_FINDINGS_2026-04-03.md  POSITION_TEMPLATE_MATCHING.md  PROJECT_STRUCTURE.md  RELEASE_CHECKLIST.md  SCAN_DEBUG_TOOLS.md  TECHNICAL_PIPELINE.md  TOTAL_SCORE_TRACE_FINDINGS_2026-04-03.md
mk8_local_play/: __init__.py  app_runtime.py  console_logging.py  data_paths.py  extract_common.py  extract_frames.py  extract_initial_scan.py  extract_score_screen_selection.py  extract_text.py  extract_video_io.py  game_catalog.py  low_res_identity.py  main.py  name_unicode.py  ocr_common.py  ocr_export.py  ocr_name_matching.py  ocr_scoreboard_consensus.py  ocr_scoring_policy.py  ocr_session_validation.py  project_paths.py  score_layouts.py  track_metadata.py
scripts/: quick_benchmark.ps1  (+5 more)
(+58 files in other folders)
